--- a/.github/workflows/newevent.yml
+++ b/.github/workflows/newevent.yml
@@ -2,8 +2,7 @@ name: new event actions
 
 on:
   issues:
-    types:
-      - [opened, edited]
+    types: [opened, edited]
 
   workflow_dispatch:
 
@@ -50,7 +49,7 @@ jobs:
             mutation {
               createDiscussion(
                 input: {repositoryId: "R_kgDOG8AAIw", categoryId: "DIC_kwDOG8AAI84CN7cU",
-                  title: "${{github.event.issue.title}}", body: ${{github.event.issue.}}
+                  title: "${{github.event.issue.title}}", body: ${{github.event.issue.body}}
                 }
               )
               {
@@ -64,11 +63,3 @@ jobs:
             '
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  issue-reply:
-    runs-on: ubuntu-latest
-    steps:
-      - run: gh issue comment $ISSUE --body "欢迎您提交活动信息，Rebase 会整理并通过公众号发出。"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ISSUE: ${{ github.event.issue.html_url }}
