--- a/.github/workflows/newevent.yml
+++ b/.github/workflows/newevent.yml
@@ -29,6 +29,7 @@ jobs:
           
   push-telegram:
     runs-on: ubuntu-latest
+    needs: issue-manager
     steps:
       - name: Send to telegram
         uses: appleboy/telegram-action@master
